librocksdb_sys/bindings/aarch64-unknown-linux-gnu-bindings.rs

extern "C" {
    pub fn crocksdb_options_set_force_consistency_checks(
        arg1: *mut crocksdb_options_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_ratelimiter_create(
        rate_bytes_per_sec: i64,
        refill_period_us: i64,
        fairness: i32,
    ) -> *mut crocksdb_ratelimiter_t;
}
extern "C" {
    pub fn crocksdb_ratelimiter_create_with_auto_tuned(
        rate_bytes_per_sec: i64,
        refill_period_us: i64,
        fairness: i32,
        mode: crocksdb_ratelimiter_mode_t,
        auto_tuned: libc::c_uchar,
    ) -> *mut crocksdb_ratelimiter_t;
}
extern "C" {
    pub fn crocksdb_ratelimiter_destroy(arg1: *mut crocksdb_ratelimiter_t);
}
extern "C" {
    pub fn crocksdb_ratelimiter_set_bytes_per_second(
        limiter: *mut crocksdb_ratelimiter_t,
        rate_bytes_per_sec: i64,
    );
}
extern "C" {
    pub fn crocksdb_ratelimiter_get_singleburst_bytes(limiter: *mut crocksdb_ratelimiter_t) -> i64;
}
pub const env_io_priority_low: _bindgen_ty_6 = 0;
pub const env_io_priority_high: _bindgen_ty_6 = 1;
pub const env_io_priority_total: _bindgen_ty_6 = 2;
pub type _bindgen_ty_6 = u32;
extern "C" {
    pub fn crocksdb_ratelimiter_request(
        limiter: *mut crocksdb_ratelimiter_t,
        bytes: i64,
        pri: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_ratelimiter_get_total_bytes_through(
        limiter: *mut crocksdb_ratelimiter_t,
        pri: libc::c_uchar,
    ) -> i64;
}
extern "C" {
    pub fn crocksdb_ratelimiter_get_bytes_per_second(limiter: *mut crocksdb_ratelimiter_t) -> i64;
}
extern "C" {
    pub fn crocksdb_ratelimiter_get_total_requests(
        limiter: *mut crocksdb_ratelimiter_t,
        pri: libc::c_uchar,
    ) -> i64;
}
extern "C" {
    pub fn crocksdb_compactionfilter_create(
        state: *mut libc::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
        filter: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                level: libc::c_int,
                key: *const libc::c_char,
                key_length: usize,
                existing_value: *const libc::c_char,
                value_length: usize,
                new_value: *mut *mut libc::c_char,
                new_value_length: *mut usize,
                value_changed: *mut libc::c_uchar,
            ) -> libc::c_uchar,
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void) -> *const libc::c_char,
        >,
    ) -> *mut crocksdb_compactionfilter_t;
}
extern "C" {
    pub fn crocksdb_compactionfilter_set_ignore_snapshots(
        arg1: *mut crocksdb_compactionfilter_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_compactionfilter_destroy(arg1: *mut crocksdb_compactionfilter_t);
}
extern "C" {
    pub fn crocksdb_compactionfiltercontext_is_full_compaction(
        context: *mut crocksdb_compactionfiltercontext_t,
    ) -> libc::c_uchar;
}
extern "C" {
    pub fn crocksdb_compactionfiltercontext_is_manual_compaction(
        context: *mut crocksdb_compactionfiltercontext_t,
    ) -> libc::c_uchar;
}
extern "C" {
    pub fn crocksdb_compactionfilterfactory_create(
        state: *mut libc::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
        create_compaction_filter: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                context: *mut crocksdb_compactionfiltercontext_t,
            ) -> *mut crocksdb_compactionfilter_t,
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void) -> *const libc::c_char,
        >,
    ) -> *mut crocksdb_compactionfilterfactory_t;
}
extern "C" {
    pub fn crocksdb_compactionfilterfactory_destroy(arg1: *mut crocksdb_compactionfilterfactory_t);
}
extern "C" {
    pub fn crocksdb_comparator_create(
        state: *mut libc::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
        compare: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                a: *const libc::c_char,
                alen: usize,
                b: *const libc::c_char,
                blen: usize,
            ) -> libc::c_int,
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void) -> *const libc::c_char,
        >,
    ) -> *mut crocksdb_comparator_t;
}
extern "C" {
    pub fn crocksdb_comparator_destroy(arg1: *mut crocksdb_comparator_t);
}
extern "C" {
    pub fn crocksdb_filterpolicy_create(
        state: *mut libc::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
        create_filter: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                key_array: *const *const libc::c_char,
                key_length_array: *const usize,
                num_keys: libc::c_int,
                filter_length: *mut usize,
            ) -> *mut libc::c_char,
        >,
        key_may_match: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                key: *const libc::c_char,
                length: usize,
                filter: *const libc::c_char,
                filter_length: usize,
            ) -> libc::c_uchar,
        >,
        delete_filter: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                filter: *const libc::c_char,
                filter_length: usize,
            ),
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void) -> *const libc::c_char,
        >,
    ) -> *mut crocksdb_filterpolicy_t;
}
extern "C" {
    pub fn crocksdb_filterpolicy_destroy(arg1: *mut crocksdb_filterpolicy_t);
}
extern "C" {
    pub fn crocksdb_filterpolicy_create_bloom(
        bits_per_key: libc::c_int,
    ) -> *mut crocksdb_filterpolicy_t;
}
extern "C" {
    pub fn crocksdb_filterpolicy_create_bloom_full(
        bits_per_key: libc::c_int,
    ) -> *mut crocksdb_filterpolicy_t;
}
extern "C" {
    pub fn crocksdb_mergeoperator_create(
        state: *mut libc::c_void,
        destructor: ::std::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
        full_merge: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                key: *const libc::c_char,
                key_length: usize,
                existing_value: *const libc::c_char,
                existing_value_length: usize,
                operands_list: *const *const libc::c_char,
                operands_list_length: *const usize,
                num_operands: libc::c_int,
                success: *mut libc::c_uchar,
                new_value_length: *mut usize,
            ) -> *mut libc::c_char,
        >,
        partial_merge: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                key: *const libc::c_char,
                key_length: usize,
                operands_list: *const *const libc::c_char,
                operands_list_length: *const usize,
                num_operands: libc::c_int,
                success: *mut libc::c_uchar,
                new_value_length: *mut usize,
            ) -> *mut libc::c_char,
        >,
        delete_value: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                value: *const libc::c_char,
                value_length: usize,
            ),
        >,
        name: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void) -> *const libc::c_char,
        >,
    ) -> *mut crocksdb_mergeoperator_t;
}
extern "C" {
    pub fn crocksdb_mergeoperator_destroy(arg1: *mut crocksdb_mergeoperator_t);
}
extern "C" {
    pub fn crocksdb_readoptions_create() -> *mut crocksdb_readoptions_t;
}
extern "C" {
    pub fn crocksdb_readoptions_destroy(arg1: *mut crocksdb_readoptions_t);
}
extern "C" {
    pub fn crocksdb_readoptions_set_verify_checksums(
        arg1: *mut crocksdb_readoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_fill_cache(
        arg1: *mut crocksdb_readoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_snapshot(
        arg1: *mut crocksdb_readoptions_t,
        arg2: *const crocksdb_snapshot_t,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_iterate_lower_bound(
        arg1: *mut crocksdb_readoptions_t,
        key: *const libc::c_char,
        keylen: usize,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_iterate_upper_bound(
        arg1: *mut crocksdb_readoptions_t,
        key: *const libc::c_char,
        keylen: usize,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_read_tier(arg1: *mut crocksdb_readoptions_t, arg2: libc::c_int);
}
extern "C" {
    pub fn crocksdb_readoptions_set_tailing(arg1: *mut crocksdb_readoptions_t, arg2: libc::c_uchar);
}
extern "C" {
    pub fn crocksdb_readoptions_set_managed(arg1: *mut crocksdb_readoptions_t, arg2: libc::c_uchar);
}
extern "C" {
    pub fn crocksdb_readoptions_set_readahead_size(arg1: *mut crocksdb_readoptions_t, arg2: usize);
}
extern "C" {
    pub fn crocksdb_readoptions_set_max_skippable_internal_keys(
        arg1: *mut crocksdb_readoptions_t,
        arg2: u64,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_total_order_seek(
        arg1: *mut crocksdb_readoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_prefix_same_as_start(
        arg1: *mut crocksdb_readoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_pin_data(
        arg1: *mut crocksdb_readoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_background_purge_on_iterator_cleanup(
        arg1: *mut crocksdb_readoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_ignore_range_deletions(
        arg1: *mut crocksdb_readoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_readoptions_set_table_filter(
        arg1: *mut crocksdb_readoptions_t,
        arg2: *mut libc::c_void,
        table_filter: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                arg2: *const crocksdb_table_properties_t,
            ) -> libc::c_int,
        >,
        destory: ::std::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
    );
}
extern "C" {
    pub fn crocksdb_writeoptions_create() -> *mut crocksdb_writeoptions_t;
}
extern "C" {
    pub fn crocksdb_writeoptions_destroy(arg1: *mut crocksdb_writeoptions_t);
}
extern "C" {
    pub fn crocksdb_writeoptions_set_sync(arg1: *mut crocksdb_writeoptions_t, arg2: libc::c_uchar);
}
extern "C" {
    pub fn crocksdb_writeoptions_disable_wal(
        opt: *mut crocksdb_writeoptions_t,
        disable: libc::c_int,
    );
}
extern "C" {
    pub fn crocksdb_writeoptions_set_ignore_missing_column_families(
        arg1: *mut crocksdb_writeoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_writeoptions_set_no_slowdown(
        arg1: *mut crocksdb_writeoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_writeoptions_set_low_pri(
        arg1: *mut crocksdb_writeoptions_t,
        arg2: libc::c_uchar,
    );
}
extern "C" {
    pub fn crocksdb_compactoptions_create() -> *mut crocksdb_compactoptions_t;
}
extern "C" {
    pub fn crocksdb_compactoptions_destroy(arg1: *mut crocksdb_compactoptions_t);
}
